<resources>
    <string name="app_name">Products</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_item_favorite">Favorite</string>
    <string name="menu_item_cart">Cart</string>
    <string name="menu_item_home">Home</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="hint_name">NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_phone">PHONE</string>
    <string name="pay">PAY</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="price_title">Price:</string>
    <string name="discount_titke">Discount:</string>
    <string name="total_title">Total:</string>
    <string name="checkout">CHECKOUT</string>
    <string name="brand">Brand: %1$s</string>
    <string name="search_product">Search Product</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="asc">Asc</string>
    <string name="dsc">Dsc</string>
    <string name="cart_is_empty">Cart is empty</string>
    <string name="filter_stock">Filter Stock</string>
    <string name="filter_weight">Filter Weight</string>
</resources>