<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.home.HomeFragment">

        <LinearLayout
            android:id="@+id/ll_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="8dp"
            android:paddingVertical="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:hint="@string/search_product"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sort"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="5dp"
                    android:backgroundTint="@color/white"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/sort"
                    android:textAllCaps="false"
                    android:textColor="@color/dark_grey" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/et_stock"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:hint="@string/filter_stock"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/et_weight"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/editbox_background"
                    android:drawableStart="@android:drawable/ic_menu_search"
                    android:hint="@string/filter_weight"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
